--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Restaurants#index</h1>
-<p>Find me in app/views/restaurants/index.html.erb</p>
+<h1>Restaurant Index</h1>
+
+<ul>
+  <% @restaurants.each do |restaurant| %>
+    <li>
+      <%= link_to restaurant.name, restaurant_path(restaurant) %><br>
+      Address: <%= restaurant.address %><br>
+      Category: <%= restaurant.category %>
+    </li>
+  <% end %>
+</ul>
+
+<%= link_to 'Add New Restaurant', new_restaurant_path %>
