Added a little bit more

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -2,4 +2,42 @@
 <p>Address: <%= @restaurant.address %></p>
 <p>Category: <%= @restaurant.category %></p>
 
+<h2>Reviews</h2>
+<ul>
+  <% @restaurant.reviews.each do |review| %>
+    <li>
+      <strong>Rating:</strong> <%= review.rating %><br>
+      <strong>Content:</strong> <%= review.content %>
+    </li>
+  <% end %>
+</ul>
+
+<h2>Leave a Review</h2>
+<%= form_with(model: [@restaurant, @review], local: true) do |form| %>
+  <% if @review.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@review.errors.count, "error") %> prohibited this review from being saved:</h2>
+      <ul>
+        <% @review.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="field">
+    <%= form.label :rating %>
+    <%= form.number_field :rating %>
+  </div>
+
+  <div class="field">
+    <%= form.label :content %>
+    <%= form.text_area :content %>
+  </div>
+
+  <div class="actions">
+    <%= form.submit 'Submit Review' %>
+  </div>
+<% end %>
+
 <%= link_to 'Back to Restaurants', restaurants_path %>
